src/test/ui/regions/regions-infer-paramd-indirect.stderr
error[E0308]: mismatched types
  --> $DIR/regions-infer-paramd-indirect.rs:22:18
   |
LL |         self.f = b;
   |                  ^ lifetime mismatch
   |
   = note: expected struct `Box<Box<&'a isize>>`
              found struct `Box<Box<&isize>>`
note: the anonymous lifetime defined here...
  --> $DIR/regions-infer-paramd-indirect.rs:21:36
   |
LL |     fn set_f_bad(&mut self, b: Box<B>) {
   |                                    ^
note: ...does not necessarily outlive the lifetime `'a` as defined here
  --> $DIR/regions-infer-paramd-indirect.rs:16:6
   |
LL | impl<'a> SetF<'a> for C<'a> {
   |      ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
